<resources>
    <string name="app_name">Mydemo</string>
    <string name="back">返回</string>
    <string name="file">Mydemo</string>
    <string name="Edit">编辑</string>
    <string name="continueAdd">继续添加</string>
    <string name="delete">删除</string>
    <string name="timian">题面</string>
    <string name="subjectName">题目名称：</string>
    <string name="subjectNum">题目数量：</string>
    <string name="subjectType">题目类型：</string>
    <string name="firstDemo">洪雨的第一个安卓程序</string>
    <string name="name">用户名：</string>
    <string name="password">密  码：</string>
    <string name="login">登录</string>
    <string name="Edit2">注册</string>
    <string name="file2">草稿箱</string>
    <string name="file3">文件管理</string>
</resources>
