<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timian"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textColor="@color/snow"
                android:textSize="24sp" />
            <Button
                android:id="@+id/delete"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/shape2"
                android:text="@string/delete"
                android:textSize="20dp"
                android:textColor="@color/blue"/>
            <Button
                android:id="@+id/add_continue"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:text="@string/continueAdd"
                android:textSize="20dp"
                android:textColor="@color/snow"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:src="@mipmap/putao">-->
                <!--</ImageView>-->
                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <requestFocus />
                </android.support.v4.view.ViewPager>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <!--分割线-->
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/grey2"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="创建题目"
                android:textColor="@color/black"
                android:textSize="30dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/snow"/>

        <!--题目名称-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/subName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/subjectName"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="24dp"
                android:textColor="@color/black"
                />




            <EditText
                android:id="@+id/subName_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edittext"
                android:hint="请输入..."
                android:textColor="@color/black"/>
        </LinearLayout>

        <!--Spanner实现选择题目类型-->
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/snow"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/subType"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/subjectType"
                android:gravity="center"
                android:textSize="24dp"
                android:textColor="@color/black"
                />

            <Spinner
                android:id="@+id/subType_Spanner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:spinnerMode="dropdown">
            </Spinner>
        </LinearLayout>

        <!--题目数量-->
        <View
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/snow"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/subSum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/subjectNum"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="24dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/subSum_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edittext"
                android:hint="请输入..."
                android:textColor="@color/black"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/snow"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/snow"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/save_draft"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:background="@drawable/shape_save_btn"
                android:text="保存草稿"/>

            <Button
                android:id="@+id/sent"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="400dp"
                android:background="@drawable/shape_sent_btn"
                android:text="发布习题" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/grey2"
        />
</LinearLayout>
